# CppVscodeSetup

./: CMakeLists.txt  README.md
CppExamples/CopyElision/include/: CopyElision.h
CppExamples/ModuleExample/include/: ModuleChildA.h  ModuleChildB.h
CppExamples/ModuleExample/interface/: iModule.h
CppExamples/ModuleExample/source/: ModuleChildA.cpp  ModuleChildB.cpp
ExternalLib/CopyElision/include/: CopyElision.h
ExternalLib/EResult/include/: eresult.h
ExternalLib/FileStream/include/: FileStreamUseCase.h
ExternalLib/FileStream/source/: FileStreamUseCase.cpp
ExternalLib/Logs/include/: log.h  logger.h
ExternalLib/ModuleExample/include/: ModuleChildA.h  ModuleChildB.h
ExternalLib/ModuleExample/interface/: iModule.h
ExternalLib/StandardDefines/include/: logger.h
ExternalLib/StandardDefines/source/: logger.cpp
MainApp/include/: BasicStdLib.h  HelperFunctions.h
MainApp/source/: main.cpp
